fetch and axios

--- a/src/views/countries.ejs
+++ b/src/views/countries.ejs
@@ -1,22 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
+
     <select name="" id="">
-        <% countries.forEach(element => { %> 
-            <option value=""><%- element.name.official %></option>
-        <% }); %> 
+        <% countries.forEach(element=> { %>
+            <option value="">
+                <%- element.name.official %>
+            </option>
+            <% }) %>
+                <!-- En el select tendriamos a disposición todos los países como opción a seleccionar -->
     </select>
 
     <select name="" id="">
-        <% genres.forEach(element => { %> 
-            <option value=""><%- element.name %></option>
-        <% }); %> 
+        <% genres.forEach(element=> { %>
+            <option value="">
+                <%- element.name %>
+            </option>
+            <% }) %>
     </select>
+
 </body>
+
 </html>
